# freertos-pico-analogread

./: .gitignore  export.txt  graph.py
blink/: .clang-format  CMakeLists.txt  FreeRTOSConfig.h  blink.ld  debug.py  main.c  ota.py  programmer.py  test.py
blink/header/: adc.h  bcc.h  defines.h  fifo.h  md5.c  md5.h  mutex.h  newheader.h  print.h  project-conf.h  project_conf.h  project_globals.h  rtc.h  spiflash.h  uart.h  variables.h
blink/src/: adc.c  bcc.c  fifo.c  globals.c  md5.c  mutex.c  print.c  rtc.c  spiflash.c  uart.c
blink/testfiles/: meter.py  ota.py  programming-mode.py  readout-mode.py  test.py
